--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
 			<artifactId>javafaker</artifactId>
 			<version>0.18</version>
 		</dependency>
+	
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
