Implementando autenticacao e implementacao do jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=rbonjour@gmail.com
 default.recipient=rbonjour@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
